--- a/templates/head.html
+++ b/templates/head.html
@@ -12,7 +12,7 @@
        More info: h5bp.com/i/378 -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-  <title>Hello World!</title>
+  <title>Twitter Search - {{.query}}</title>
   <meta name="description" content="">
 
   <!-- Mobile viewport optimized: h5bp.com/viewport -->
@@ -47,7 +47,9 @@
           </li>
         </ul>
         <form class="navbar-search pull-left" action="/search" method="POST">
-          <input name="query" type="text" class="search-query span4" placeholder="Search twitter...">
+          <input name="query" type="text" class="search-query span4" 
+                 value="{{.query}}"
+                 placeholder="Search twitter...">
         </form>
       </div>
     </div>
