--- a/templates/tweet-row.html
+++ b/templates/tweet-row.html
@@ -1,4 +1,8 @@
-<em><a href="/tweet/{{.IdStr}}">{{.FromUserName}}</a></em>
+<em>
+  <a href="/tweet/{{.IdStr}}?query={{urlquery .Query}}">
+    {{.FromUserName}}
+  </a>
+</em>
 <p>
   {{.Text}}
 </p>
