--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,19 @@
 <div class="row-fluid">
   <div class="span10">
     <h3>Search : {{.query}}</h3>
-    <br />
-    <ul class="unstyled">
-      {{range .tweets}}
-        <li>
-          {{template "tweet-row.html" .}}
-          <br />
-        </li>
-      {{end}}
-    </ul>
   </div>
 </div>
+{{range .tweets}}
+<div class="row-fluid">
+  <div class="span1">
+    <a href="" class="thumbnail">
+      <img src="{{.ProfileImageUrl}}" height="48" width="48"/>
+    </a>
+  </div>
+  <div class="span7">
+    {{template "tweet-row.html" .}}
+  </div>  
+</div>
+<br />
+{{end}}
+
