simplified handlers and rendering

--- a/templates/tweet.html
+++ b/templates/tweet.html
@@ -1,3 +1,4 @@
+{{template "head.html" .}}
 <div class="row-fluid">
   {{with .tweet}}
   <div class="span1">
@@ -12,3 +13,4 @@
   </div>
   {{end}}
 </div>
+{{template "tail.html" .}}
