--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,4 @@
+{{template "head.html" .}}
 <div class="row-fluid">
   <div class="span10">
     <h3>Search : {{.query}}</h3>
@@ -16,4 +17,4 @@
 </div>
 <br />
 {{end}}
-
+{{template "tail.html" .}}
